--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,10 @@ dependencies {
     // NeoForge dependency
     implementation "net.neoforged:neoforge:${neo_version}"
 
+    // Create integration - Using Create 6.0.6 for 1.21.1
+    // Place create-1.21.1-6.0.6.jar in the libs/ folder
+    compileOnly files('libs/create-1.21.1-6.0.6.jar')
+
     // REI integration
     compileOnly 'me.shedaniel.cloth:basic-math:0.6.1'
     compileOnly "dev.architectury:architectury-neoforge:13.0.6"
