--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,6 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven { url = 'https://maven.neoforged.net/releases' }
-        maven { url "https://maven.architectury.dev/" }
+        maven { url = "https://maven.architectury.dev/" }
     }
 }
